# Clevertech-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  package.json  pyproject.toml  railway.toml  railway_custom_domain.py
.github/workflows/: publish.yml  test.yml
src/clevertech_mcp/: auth.py  client.py  config.py  login.py  rate_limit.py  server.py
src/clevertech_mcp/tools/: __init__.py  building.py  business.py  dls.py  geo.py  meta.py  property.py  zoning.py
tests/: conftest.py  test_auth.py  test_building.py  test_business.py  test_dls.py  test_login.py  test_property.py  test_server.py  test_zoning.py
