[project]
name = "clevertech-mcp-server"
version = "0.1.0"
description = "MCP Server for CleverTech Canadian government data APIs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "CleverTech", email = "dev@clevertech.ca"}]
keywords = ["mcp", "canada", "property", "land-survey", "dls", "gis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
clevertech-mcp-server = "clevertech_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clevertech_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
